syntax = "proto3";

option go_package = "api_gw/pb";

import "google/api/annotations.proto";
import "api/app.proto";
import "api/message.proto";

package pb;

// The service definition
service AuthService {

  rpc Register (RegisterRequest) returns (GenericResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/register",
    };
  }

  rpc Login (LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/login"
    };
  }

  rpc Verify (VerifyRequest) returns (VerifyResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/verify"
    };
  }

}
